# yan

./: .gitignore  CMakeLists.txt  README.md  config.h.in  vcpkg-configuration.json  vcpkg.json
src/: builder.cpp  builder.hpp  bvh.cpp  cluster.cpp  cluster.hpp  cluster_group.cpp  cluster_group.hpp  graph_utility.cpp  graph_utility.hpp  hasher.hpp  meshopt_simplify.cpp  meshoptimizer.h  partitioner.cpp  partitioner.hpp  simplifier.cpp  simplifier.hpp  simplify.cpp  simplify.hpp  utility.cpp  utility.hpp  validator.cpp
tools/: builder.cpp  simplifier.cpp
visualizer/: main.cpp  render.cpp  render.h  viewer.cpp  viewer.h
visualizer/shaders/: box.frag  box.vert  cluster.frag  cluster.vert  cluster_batch.comp  cluster_culling.comp  line.frag  line.vert  mesh.frag  mesh.vert
